kb: add/update topics computational-geometry, jvm-performance-tuning, concurrent-collections, java-streams-advanced, reflection-and-annotations